feat: add header

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Connect CSS file-->
   <link rel="stylesheet" href="css/style.css">
-  <title>Tobolist</title>
+  <title>Toboolist</title>
 </head>
 <body>
+  <!-- Header -->
+  <header class="header">
+    <img src="img/logo.png" alt="TobooList logo" class="toboolist-logo">
+  </header>
+  <!-- /Header -->
   
 </body>
 </html>
