--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     <img src="img/logo.png" alt="TobooList logo" class="toboolist-logo">
   </header>
   <!-- /Header -->
+
+  <!-- Main -->
+  <main class="container">
+    <!-- Header-main  -->
+    <header class="header-main">
+      <div class="container-header-main">
+        <input type="text" placeholder="es: Fare la spesa..." class="input-header-main">
+        <button class="button-header-main">Add Task</button>
+      </div>
+    </header>
+    <!-- /Header-main  -->
+
+    <hr class="white-separator">
+  </main>
+  <!-- /Main -->
+
   
 </body>
 </html>
