fead: add main section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,114 @@
     <!-- /Header-main  -->
 
     <hr class="white-separator">
+
+    <!-- main-section  -->
+    <div class="container-main-section">
+      <ol class="order-list">
+        <li>&#10146;
+          TASK PRECEDENTI
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state check">&check;</button>
+                <span class="list-of-list strikethrough-text">Quartery Newsletter</span>
+                <span class="button-like button-like-blue strikethrough-text">Editoria!</span>
+
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>&#10146; 
+          OGGI
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state check">&check;</button>
+                <span class="list-of-list strikethrough-text">Recruiting blog post</span>
+                <span class="button-like button-like-blue strikethrough-text">Editoria!</span>
+              </li>
+            </ul>
+          </div>
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state check">&check;</button>
+                <span class="list-of-list strikethrough-text">Mobile app luaunch</span>
+                <span class="button-like button-like-viola strikethrough-text">Q1 Goals</span>
+              </li>
+            </ul>
+          </div>
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state cross">&cross;</button>
+                <span class="list-of-list">Interview John H.</span>
+                <span class="button-like button-like-water-green">Recruiting</span>
+
+              </li>
+            </ul>
+          </div>
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state check">&check;</button>
+                <span class="list-of-list strikethrough-text">Summit updateto mobile storefronts</span>
+                <span class="button-like button-like-orange strikethrough-text">Mobile</span>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>&#10146; 
+          PROSSIMI GIORNI
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state cross">&cross;</button>
+                <span class="list-of-list">Schedule meeting with Alex</span>
+                <span class="button-like strikethrough-text"></span>
+
+              </li>
+            </ul>
+          </div>
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state check">&check;</button>
+                <span class="list-of-list strikethrough-text">Homepage refresh</span>
+                <span class="button-like button-like-rosa strikethrough-text">Website</span>
+
+              </li>
+            </ul>
+          </div>
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state check">&check;</button>
+                <span class="list-of-list strikethrough-text">Onboard new Sales team members</span>
+                <span class="button-like button-like-green strikethrough-text">Sales</span>
+
+              </li>
+            </ul>
+          </div>
+          <div class="container-unorder-list">
+            <ul class="unorder-list">
+              <li>
+                <button class="button-unorder-list-state check">&check;</button>
+                <span class="list-of-list strikethrough-text">Review editorial calendar</span>
+                <span class="button-like button-like-blue strikethrough-text">Editoria!</span>
+
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ol>
+    </div>
+    <!-- /main-section  -->
+
   </main>
   <!-- /Main -->
+
+
 
   
 </body>
